# GPT-SoVITS

./: Cargo.toml  README.md
desktop/: Cargo.toml  README.md  main.rs
mobile/: Cargo.toml  README.md  build.rs  main.rs
src/: error.rs  lib.rs  logits_sampler.rs  onnx_builder.rs  text.rs
src/text/: bert.rs  dict.rs  en.rs  num.rs  phone_symbol.rs  utils.rs  zh.rs
src/text/en/: g2p_en.rs
src/text/zh/: g2pw.rs  jyutping_list.rs  split.rs  yue.rs
