[package]
name = "gpt-sovits"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "A Rust implementation of GPT-SoVITS for high-performance voice synthesis and voice cloning"
keywords = ["tts", "voice-synthesis", "voice-cloning", "speech", "ai"]
categories = ["multimedia", "multimedia::audio", "science"]
authors = ["SmileSky <mzdk100@foxmail.com>"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mzdk100/GPT-SoVITS.git"

[workspace]
default-members = ["desktop"]
members = ["desktop", "mobile"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
arpabet = "2.0"
async-stream = "0.3"
futures = "0.3"
jieba-rs = "0.10"
log = "0.4"
ndarray = "0.17"
ort = "2.0.0-rc.12"
pest = "2.8.2"
pest_derive = "2.8.2"
rand = "0.10.0-rc.0"
regex = "1.11.2"
serde = "1.0.224"
voxudio = "0.7"
serde_json = "1.0.145"
tokenizers = { version = "0.23", default-features = false }
tokio = "1.52"
unicode-segmentation ="1.12.0"

[dependencies]
arpabet.workspace = true
async-stream.workspace = true
futures.workspace = true
jieba-rs.workspace = true
log.workspace = true
ndarray.workspace = true
ort.workspace = true
pest.workspace = true
pest_derive.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers = {workspace = true,features = ["onig"]}
tokio = {workspace = true, features = ["fs"]}
unicode-segmentation.workspace = true
voxudio.workspace = true
