[package]
name = "gpt-sovits-desktop"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "gpt-sovits"
path = "main.rs"

[dependencies]
anyhow.workspace = true
gpt-sovits.path = ".."
tokio = {workspace = true, features = ["macros", "rt-multi-thread"] }
voxudio = { workspace = true, features = ["device"] }