[package]
name = "gpt-sovits-mobile"
version.workspace = true
edition.workspace = true

[package.metadata.android]
apk_name = "gpt-sovits"
use_aapt2 = true
runtime_libs = "libs"
application.has_code = false

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 36
max_sdk_version = 36

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"

[[package.metadata.android.application.activity.meta_data]]
name="android.app.lib_name"
value="gpt_sovits_mobile"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[package.metadata.android.signing.release]
path = "app.jks"
keystore_password = "123456"

[lib]
path = "main.rs"
crate-type = ["cdylib"]
test = false

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
anyhow.workspace = true
ndk-glue = "0.7.0"
mobile-entry-point = "0.1.1"
rodio = {workspace = true, features = ["playback"]}
tokio = {workspace = true,features = ["rt-multi-thread"]}

[dependencies.gpt-sovits]
path = ".."

[build-dependencies]
cargo-emit = "0.2.1"